[package]
name = "pbzlib"
version = "0.1.0"
authors = ["Fabien Geyer <fabien.geyer@tum.de>"]
homepage = "https://github.com/fabgeyer/pbzlib-rs"
repository = "https://github.com/fabgeyer/pbzlib-rs"
documentation = "https://github.com/fabgeyer/pbzlib-rs"
keywords = ["serialization", "pbzlib"]
license = "MIT"
edition = "2018"

[[bin]]
path = "pbz2jsonl/main.rs"
name = "pbz2jsonl"
bench = false

[dependencies]
flate2 = "1.0"
protobuf = "2.25.0"
serde = "1.0.130"
serde_json = "1.0.72"
serde-protobuf = "0.8.2"
