[package]
name = "pbzlib"
version = "0.1.1"
authors = ["Fabien Geyer <fabien.geyer@tum.de>"]
description = "This library is used for simplifying the serialization and deserialization of protocol buffer objects to/from files. The main use-case is to save and read a large collection of objects of the same type. Each file contains a header with the description of the protocol buffer, meaning that no compilation of .proto description file is required."
readme = "README.md"
homepage = "https://github.com/fabgeyer/pbzlib-rs"
repository = "https://github.com/fabgeyer/pbzlib-rs"
documentation = "https://github.com/fabgeyer/pbzlib-rs"
keywords = ["serialization", "pbzlib"]
license = "MIT"
edition = "2018"

[[bin]]
path = "pbz2jsonl/main.rs"
name = "pbz2jsonl"
bench = false
test = false

[[bin]]
path = "pbzspeed/main.rs"
name = "pbzspeed"
bench = false
test = false

[dependencies]
flate2 = "1.0"
protobuf = "2.25.0"
serde = "1.0.130"
serde_json = "1.0.72"
serde-protobuf = "0.8.2"
